<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.keremgok.smsforward.ui.fragments.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_forwarders"
        android:name="com.keremgok.smsforward.ui.fragments.ForwardersFragment"
        android:label="@string/nav_forwarders"
        tools:layout="@layout/fragment_forwarders" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.keremgok.smsforward.ui.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_security"
        android:name="com.keremgok.smsforward.ui.fragments.SecurityFragment"
        android:label="@string/nav_security"
        tools:layout="@layout/fragment_security" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.keremgok.smsforward.ui.fragments.DataFragment"
        android:label="@string/nav_data"
        tools:layout="@layout/fragment_data" />

</navigation> 